<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fl_wrapper">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/roti" />
        </FrameLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:src="@drawable/profile_picture"
            android:id="@+id/profil_image"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/Value"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/Safanah"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/content_text"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/black" />



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/rotinyeni"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>
        </FrameLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:src="@drawable/peter"
            android:id="@+id/peter"
            android:layout_gravity="start"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/Make"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="0dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/howtomake"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/rotiti"/>

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receipe"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="0dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/bread"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/bread2"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/bread3"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/bread4"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="100dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/bread5"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />


    </LinearLayout>

    </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_navigation"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            app:itemTextColor="#28973A"
            app:itemIconTint="#28973A"
            app:menu="@menu/bottom_nav_menu"
            />

</RelativeLayout>